--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://srupa7871:j0nkmRhdBX71txUv@cluster0.7idk0.mongodb.net/todolist?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://@cluster0.7idk0.mongodb.net/todolist?retryWrites=true&w=majority&appName=Cluster0
